<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/vm"
    android:layout_height="match_parent"
    android:id="@+id/root_element"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:textSize="30dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_in_name" />
        <TextView
            android:textSize="18dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name_author" />
    </LinearLayout>
    <TextView
        android:id="@+id/text_bottom"
        android:layout_alignParentBottom="true"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/text_botton" />
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_above="@id/exit"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"

            android:orientation="horizontal">

            <Button
            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/btn_sign_in"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="2"
            android:text="@string/button_sign_in" />

        <Button
            android:id="@+id/button_registration"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/btn_sign_in"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="2"
            android:text="@string/button_registrayion"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_bottom"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/button_exit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@drawable/btn_exit"
            android:text="Выход"
            android:layout_marginLeft="6dp"
            android:layout_marginVertical="15dp" />
    </LinearLayout>
</RelativeLayout>